# tos_datasets

./: .gitignore  README.md  pyproject.toml
src/privacy_datasets/: __init__.py
src/tos_datasets/: proto.py
src/tos_datasets/converters/: cuad.py  memnet_tos.py  multilingual_unfair_clause.py  one_hundread_and_fourty_two.py  one_hundread_tos.py  piextract.py  policy_ie.py  policy_qa.py  polisis.py  privacy_policy.py  privacy_qa.py  ten_tos.py
